Fixed the gap between the image and the item on the menu

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ h1, h2{
 img{
     display: block;
     margin: 0 auto;
+    margin-top: -25px;
 }
 footer{
     text-align: center;
